feat(monitor): 完善前后端接口逻辑,完成主机配置页面
