# win-monitor-console/vue.config.js
@@ -1,5 +1,17 @@
+const NodePolyfillPlugin = require('node-polyfill-webpack-plugin');
+
 module.exports = {
-    publicPath: '/dist/',
+    configureWebpack: {
+        plugins: [
+            new NodePolyfillPlugin()
+        ],
+        resolve: {
+            fallback: {
+                "url": require.resolve("url/")
+            }
+        }
+    },
+    publicPath: '/console/',
     css: {
         loaderOptions: {
             css: {}, less: {
@@ -12,9 +24,17 @@ module.exports = {
             },
         },
     },
+    chainWebpack: config => {
+        config.module
+            .rule('ts')
+            .test(/\.ts$/)
+            .use('ts-loader')
+            .loader('ts-loader')
+            .end();
+    },
     devServer: {
         proxy: {
-            '/api': {
+            '/api/console': {
                 target: 'http://localhost/', // 本地API服务的地址
                 changeOrigin: true,
             }
