# win-monitor-server/client_api.go
@@ -17,14 +17,14 @@ type MonitorServer struct {
 }
 
 func (m *MonitorServer) RegisterApi(e *gin.Engine) {
-	apiGroup := e.Group("api")
+	apiGroup := e.Group("api/client")
 	{
 		apiGroup.POST("register", m.Register)
 		apiGroup.POST("monitor", m.Monitor)
 		apiGroup.POST("screenshot", m.Screenshot)
 
 	}
-	console := e.Group("console")
+	console := e.Group("api/console")
 	{
 		console.GET("host", m.Hosts)
 		console.GET("host/:hostId", m.HostMonitor)
@@ -41,7 +41,7 @@ func (m *MonitorServer) RegisterApi(e *gin.Engine) {
 //	@Produce		json
 //	@Param			参数	body		Host						true	"参数"
 //	@Success		200	{object}	Response{data=MonitorConf}	"成功"
-//	@Router			/api/register  [post]
+//	@Router			/api/client/register  [post]
 func (m *MonitorServer) Register(c *gin.Context) {
 	var reg Host
 	err := c.ShouldBindJSON(&reg)
@@ -92,7 +92,7 @@ func (m *MonitorServer) Register(c *gin.Context) {
 //	@Produce		json
 //	@Param			参数	body		Monitor					true	"参数"
 //	@Success		200	{object}	Response{data=string}	"成功"
-//	@Router			/api/monitor  [post]
+//	@Router			/api/client/monitor  [post]
 func (m *MonitorServer) Monitor(c *gin.Context) {
 
 	var mon Monitor
@@ -135,7 +135,7 @@ func (m *MonitorServer) Monitor(c *gin.Context) {
 //	@Produce		json
 //	@Param			参数	body		HostScreenshot			true	"参数"
 //	@Success		200	{object}	Response{data=string}	"成功"
-//	@Router			/api/screenshot  [post]
+//	@Router			/api/client/screenshot  [post]
 func (m *MonitorServer) Screenshot(c *gin.Context) {
 
 	var screenshot HostScreenshot
@@ -167,71 +167,4 @@ func (m *MonitorServer) Screenshot(c *gin.Context) {
 
 	err = m.db.Model(&HostScreenshot{}).Clauses(clause.OnConflict{DoUpdates: clause.AssignmentColumns([]string{"pre", "cur", "distance", "capture_time"})}).Create(&screenshot).Error
 	c.JSON(http.StatusOK, Response{Code: http.StatusOK, Msg: "success"})
-}
-
-// Hosts 主机列表
-//
-//	@Summary		主机列表
-//	@Tags			控制台接口
-//	@Description	主机列表
-//	@Accept			json
-//	@Produce		json
-//	@Success		200	{object}	Response{data=[]HostModel}	"成功"
-//	@Router			/console/host  [get]
-func (m *MonitorServer) Hosts(c *gin.Context) {
-
-	var devices []HostModel
-	if err := m.db.Model(&HostModel{}).Find(&devices).Error; err != nil {
-		c.JSON(http.StatusInternalServerError, Response{Code: http.StatusInternalServerError, Msg: err.Error()})
-		return
-	}
-	c.JSON(http.StatusOK, Response{Code: http.StatusOK, Data: devices})
-}
-
-// HostMonitor 监控数据
-//
-//	@Summary		监控数据
-//	@Tags			控制台接口
-//	@Description	监控数据
-//	@Accept			json
-//	@Produce		json
-//	@Param			hostId	path		string						true	"参数"
-//	@Success		200		{object}	Response{data=HostMonitor}	"成功"
-//	@Router			/console/host/:hostId  [get]
-func (m *MonitorServer) HostMonitor(c *gin.Context) {
-	hostId := c.Param("hostId")
-	var monitors []MonitorModel
-	m.db.Model(&MonitorModel{}).Debug().Select("type", "name", "boot_time", "time", "total", "used", "free", "per").Where("host_id = ? ", hostId).Order("id desc").Limit(m.conf.ServerConfig.Line).Find(&monitors)
-	var screenshot HostScreenshot
-	m.db.Model(&HostScreenshot{}).Where("host_id = ?", hostId).First(&screenshot)
-	c.JSON(http.StatusOK, Response{Code: http.StatusOK, Data: HostMonitor{
-		Monitors:   monitors,
-		Screenshot: screenshot,
-	},
-	})
-}
-
-// UpdateHost 程序主机配置
-//
-//	@Summary		程序主机配置
-//	@Tags			控制台接口
-//	@Description	程序主机配置
-//	@Accept			json
-//	@Produce		json
-//	@Param			参数	body		HostModel				true	"参数"
-//	@Success		200	{object}	Response{data=string}	"成功"
-//	@Router			/console/host/conf  [post]
-func (m *MonitorServer) UpdateHost(c *gin.Context) {
-	var host HostModel
-	err := c.ShouldBindJSON(&host)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, Response{Code: http.StatusBadRequest, Msg: "Bad Request"})
-		return
-	}
-	err = m.db.Model(&host).Where("host_id = ?", host.HostID).Updates(HostModel{HostID: host.HostID, CustomName: host.CustomName, Config: host.Config}).Error
-	if err != nil {
-		c.JSON(http.StatusBadRequest, Response{Code: http.StatusBadRequest, Msg: "Bad Request"})
-		return
-	}
-	c.JSON(http.StatusBadRequest, Response{Code: http.StatusOK})
 }
